--- a/productpage.html
+++ b/productpage.html
@@ -72,7 +72,7 @@
             <div class="review-tab">reviews</div>
             <div class="question-tab">questions</div>
           </div>
-          <div class="description-tab-info">
+          <div class="description-tab-info.is-active">
             <div class="description-tab-info-title">Origins</div>
             <div class="description-tab-info-info">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -94,6 +94,108 @@
             </div>
             <div class="description-tab-info-title">Full of vitamins</div>
             <div class="description-tab-info-info">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Molestias placeat magnam impedit cumque, odio ipsa. Explicabo ex
+              dolorum totam quis?Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Possimus delectus, tenetur vel nihil similique
+              excepturi hic nisi cupiditate necessitatibus et assumenda
+              dignissimos ex earum! Minus culpa voluptate est qui doloribus!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              sequi hic cupiditate. Ratione dolore magni, sapiente distinctio,
+              quas earum sint beatae aperiam culpa non eum eligendi iure rem
+              facere nulla rerum? Adipisci voluptates neque tenetur? Aspernatur,
+              dolore dignissimos. Nobis dicta laudantium molestias reiciendis
+              ratione earum rerum nulla at saepe, excepturi quidem eaque ex quo
+              eveniet quaerat distinctio voluptas, odit obcaecati sint. Nulla
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              sequi hic cupiditate. Ratione dolore magni, sapiente distinctio,
+              quas earum sint beatae aperiam culpa non eum eligendi iure rem
+              facere nulla rerum? Adipisci voluptates neque tenetur? Aspernatur,
+              dolore dignissimos. Nobis dicta laudantium molestias reiciendis
+              ratione earum rerum nulla at saepe, excepturi quidem eaque ex quo
+              eveniet quaerat distinctio voluptas, odit obcaecati sint. Nulla
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              sequi hic cupiditate. Ratione dolore magni, sapiente distinctio,
+              quas earum sint beatae aperiam culpa non eum eligendi iure rem
+              facere nulla rerum? Adipisci voluptates neque tenetur? Aspernatur,
+              dolore dignissimos. Nobis dicta laudantium molestias reiciendis
+              ratione earum rerum nulla at saepe, excepturi quidem eaque ex quo
+              eveniet quaerat distinctio voluptas, odit obcaecati sint. Nulla
+            </div>
+          </div>
+          <div class="review-tab-info">
+            <div class="review-tab-info-title">review</div>
+            <div class="review-tab-info-info">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Accusantium repellat velit ratione. Voluptates, vero. Magni
+              explicabo, officia qui nam tenetur tempora impedit quis odio
+              corporis debitis amet, ipsam corrupti numquam vel provident.
+              Doloremque, voluptatibus molestias nostrum minus modi sunt
+              reprehenderit esse temporibus, molestiae ipsam fugit ex architecto
+            </div>
+            <div class="review-tab-info-title">review</div>
+            <div class="review-tab-info-info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              sequi hic cupiditate. Ratione dolore magni, sapiente distinctio,
+              quas earum sint beatae aperiam culpa non eum eligendi iure rem
+              facere nulla rerum? Adipisci voluptates neque tenetur? Aspernatur,
+              dolore dignissimos. Nobis dicta laudantium molestias reiciendis
+              ratione earum rerum nulla at saepe, excepturi quidem eaque ex quo
+              eveniet quaerat distinctio voluptas, odit obcaecati sint. Nulla
+            </div>
+            <div class="review-tab-info-title">reviews</div>
+            <div class="review-tab-info-info">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Molestias placeat magnam impedit cumque, odio ipsa. Explicabo ex
+              dolorum totam quis?Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Possimus delectus, tenetur vel nihil similique
+              excepturi hic nisi cupiditate necessitatibus et assumenda
+              dignissimos ex earum! Minus culpa voluptate est qui doloribus!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              sequi hic cupiditate. Ratione dolore magni, sapiente distinctio,
+              quas earum sint beatae aperiam culpa non eum eligendi iure rem
+              facere nulla rerum? Adipisci voluptates neque tenetur? Aspernatur,
+              dolore dignissimos. Nobis dicta laudantium molestias reiciendis
+              ratione earum rerum nulla at saepe, excepturi quidem eaque ex quo
+              eveniet quaerat distinctio voluptas, odit obcaecati sint. Nulla
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              sequi hic cupiditate. Ratione dolore magni, sapiente distinctio,
+              quas earum sint beatae aperiam culpa non eum eligendi iure rem
+              facere nulla rerum? Adipisci voluptates neque tenetur? Aspernatur,
+              dolore dignissimos. Nobis dicta laudantium molestias reiciendis
+              ratione earum rerum nulla at saepe, excepturi quidem eaque ex quo
+              eveniet quaerat distinctio voluptas, odit obcaecati sint. Nulla
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              sequi hic cupiditate. Ratione dolore magni, sapiente distinctio,
+              quas earum sint beatae aperiam culpa non eum eligendi iure rem
+              facere nulla rerum? Adipisci voluptates neque tenetur? Aspernatur,
+              dolore dignissimos. Nobis dicta laudantium molestias reiciendis
+              ratione earum rerum nulla at saepe, excepturi quidem eaque ex quo
+              eveniet quaerat distinctio voluptas, odit obcaecati sint. Nulla
+            </div>
+          </div>
+          <div class="question-tab-info">
+            <div class="question-tab-info-title">question</div>
+            <div class="question-tab-info-info">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Accusantium repellat velit ratione. Voluptates, vero. Magni
+              explicabo, officia qui nam tenetur tempora impedit quis odio
+              corporis debitis amet, ipsam corrupti numquam vel provident.
+              Doloremque, voluptatibus molestias nostrum minus modi sunt
+              reprehenderit esse temporibus, molestiae ipsam fugit ex architecto
+            </div>
+            <div class="question-tab-info-title">question</div>
+            <div class="question-tab-info-info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              sequi hic cupiditate. Ratione dolore magni, sapiente distinctio,
+              quas earum sint beatae aperiam culpa non eum eligendi iure rem
+              facere nulla rerum? Adipisci voluptates neque tenetur? Aspernatur,
+              dolore dignissimos. Nobis dicta laudantium molestias reiciendis
+              ratione earum rerum nulla at saepe, excepturi quidem eaque ex quo
+              eveniet quaerat distinctio voluptas, odit obcaecati sint. Nulla
+            </div>
+            <div class="question-tab-info-title">question</div>
+            <div class="question-tab-info-info">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Molestias placeat magnam impedit cumque, odio ipsa. Explicabo ex
               dolorum totam quis?Lorem ipsum dolor sit amet consectetur
@@ -277,5 +379,29 @@
         <div class="footer-copywrite">Copyright&copy; 2020 PeaTea</div>
       </div>
     </div>
+    <script>
+      const description = document.querySelector(".description-tab");
+      const reviews = document.querySelector(".review-tab");
+      const question = document.querySelector(".question-tab");
+      const descriptionInfo = document.querySelector(".description-tab-info");
+      const reviewsInfo = document.querySelector(".review-tab-info");
+      const questionInfo = document.querySelector(".question-tab-info");
+
+      description.addEventListener("click", () => {
+        descriptionInfo.classList.add(".is-active");
+        reviewsInfo.classList.remove(".is-active");
+        questionInfo.classList.remove("is-active");
+      });
+      reviews.addEventListener("click", () => {
+        descriptionInfo.classList.remove("is-active");
+        reviewsInfo.classList.add("is-active");
+        questionInfo.classList.remove("is-active");
+      });
+      question.addEventListener("click", () => {
+        descriptionInfo.classList.remove("is-active");
+        reviewsInfo.classList.remove("is-active");
+        questionInfo.classList.add("is-active");
+      });
+    </script>
   </body>
 </html>
