--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="shoppingcart.css" />
   </head>
   <body>
-    <link rel="stylesheet" href="shoppingcart.css" />
-    <div class="shoppingcart">
+    <div class="shoppingcart active">
       <div class="title">
         <div class="title__header">Shopping Cart</div>
         <div class="shoppingcart__close"><button>close X</button></div>
